--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "^0.13.9",
-    "react-swipeable-views-utils": "^0.13.9"
+    "react-swipeable-views-utils": "^0.13.9",
+    "react-youtube": "^7.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
